kubernetes/apps/zot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zot
  labels:
    pod-security.kubernetes.io/enforce: restricted
