kubernetes/apps/zot/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot
  namespace: zot
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-internal-wildcard
  hostnames:
    - zot.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zot
          port: 5000
